# CppCodeBox

./: .gitignore  CMakeLists.txt  CmakeTest.sln  CppCodeBox.cpp  CppCodeBoxConfig.h.in  NOTICE.txt  README.md  ReadMe.md  main.cpp
.github/workflows/: sample.yml
common/: CommConsts.hpp  CommHeader.hpp  CommHeaders.hpp  CommStructs.hpp
dists/: CppKits
dists/cmake/: MyCppKitsConfig.cmake
dists/inc/common/: CommConsts.hpp  CommHeader.hpp  CommStructs.hpp
dists/inc/modules/: FuncWrapper.hpp  RiverNetAutoInit.hpp  hello.hpp  lazy.hpp  optional.hpp
dists/lib/: MyCppKits.lib  hello.hpp
dists/lib/cmake/: MyCppKitsConfig.cmake
doc/: .gitkeep
docs/: BinaryFormat.docx  C-Cpp-Details.md  C-Cpp-Notes.md  GraphSearchingAlgo.md  IOBinaryFormat.md  RiverNetAutoInitAlgo.md  ~$naryFormat.docx
modules/: Any.hpp  CMakeLists.txt  DataSmoothingAlgo.cpp  DataSmoothingAlgo.hpp  DllParser.cpp  DllParser.hpp  FuncWrapper.hpp  FunctionTraits.cpp  FunctionTraits.hpp  GraphSearchingAlgo.hpp  GraphSearchingAlog.cpp  InterpolationMethods.cpp  InterpolationMethods.hpp  RiverNetAutoInit.cpp  RiverNetAutoInit.hpp  ScopeGuard.hpp  TaskList.hpp  TupleHelper.hpp  UsagesHdf5.hpp  Variant.hpp  hello.cpp  hello.hpp  lazy.cpp  lazy.hpp  lazy.inl  optional.hpp  optional.inl  range.hpp  range.inl
modules/rc/: MyCppKitsConfig.cmake.in  VersionInfo.rc.in
res/: .gitkeep
src/: .gitkeep  CMakeLists.txt
src/common/: .gitkeep  CommHeader.h
src/core/: .gitkeep  AppRunFlow.cpp  AppRunFlow.h  ModelRegister.cpp  ModelRegister.h  StatusMoniter.cpp  StatusMoniter.h  TaskBatcher.cpp  TaskBatcher.h
src/model/hello/: CMakeLists.txt  HelloDemo.cpp  HelloDemo.h  HelloX64.sln
tests/: .gitkeep  CMakeLists.txt  catch.cpp  data_RiverNetAutoInit.txt  test_Any.cpp  test_DataSmoothingAlgo.cpp  test_DllParser.cpp  test_FuncWrapper.cpp  test_FunctionTraits.cpp  test_GraphSearchingAlgo.cpp  test_InterpolationMethods.cpp  test_Lazy.cpp  test_Optional.cpp  test_Range.cpp  test_RiverNetAutoInit.cpp  test_ScopeGuard.cpp  test_TaskList.cpp  test_TupleHelper.cpp  test_Variant.cpp  test_hello.cpp
tools/: .gitkeep
tools/Catch/: catch.hpp
tools/MathFunctions/: MathFunctions.h  MathFunctions.hpp  mysqrt.cxx
